2004-01-29  Ronald Bultje  <rbultje@ronald.bitfreak.net>

	* docs/pwg/advanced-tagging.xml:
	  Add docs about tag writing.

2004-01-29  Ronald Bultje  <rbultje@ronald.bitfreak.net>

	* docs/pwg/advanced-tagging.xml:
	  Add a part about tag reading and application signalling... Tag
	  writing still needs to be documented.
	* gst/elements/gstfilesrc.c: (gst_filesrc_set_location):
	  We can set file locations in READY, too.

2004-01-29  Julien MOUTTE <julien@moutte.net>

	* docs/random/ds/element-checklist: Adding some notes about src
	events.

2004-01-29  Ronald Bultje  <rbultje@ronald.bitfreak.net>

	* docs/random/mimetypes:
	  Update docs to point to correct elements for various mimetypes, and
	  some more errors pointed out by Stéphane LOEUILLET (aka LeRoutier)
	  <stephane.loeuillet@tiscali.fr>.

2004-01-28  David Schleef  <ds@schleef.org>

	* docs/pwg/intro-basics.xml: rewrite bufferpool stuff.

2004-01-29  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* docs/random/mimetypes:
	  update docs for audio/x-raw-float. Add "buffer-frames=0 means
	  undefined"
	* gst/elements/gstfilesrc.c: (gst_filesrc_set_location):
	  make it only work in NULL.
	* gst/gstcaps.c:
	  don't posion NULL caps
	* gst/gstelement.c: (gst_element_set_time):
	  add debugging statement
	* gst/gstelement.c: (gst_element_emit_found_tag),
	(gst_element_found_tag_func), (gst_element_found_tags):
	* gst/gstelement.h:
	  These functions take const taglists
	* gst/gstpad.c: (gst_pad_proxy_getcaps):
	  fix memleak
	* gst/gstpad.c: (gst_pad_event_default):
	  make more effort on handling discont and clocks, g_warn if everything
	  fails
	* gst/gststructure.c: (gst_structure_remove_fields),
	(gst_structure_remove_fields_valist):
	* gst/gststructure.h:
	  add gst_structure_remove_fields(_valist)
	* gst/gsttag.c:
	  fix doc glitch

2004-01-28  David Schleef  <ds@schleef.org>

	* docs/random/ds/element-checklist: Notes about gst_caps_to_string()